Update SBT.
git-svn-id: https://scalaz.googlecode.com/svn/trunk@1377 ea79b6a6-c355-11dd-8bad-cde060d8fd3c